# mado

./: .gitignore  LICENSE  README.md  kmonad.kbd
mado-py/: README.md  pyproject.toml
mado-py/mado/: config.py  keyboard_manager.py  main.py  types_.py  win_event_listener.py  window.py  window_api.py
mado-py/mado/window_manager/: __init__.py  commands.py  events.py  state.py
